libprotocol/tests/snapshots/integration_test__it_check_generate_scenario.snap
---
source: libprotocol/tests/integration_test.rs
expression: "std::fs::read_to_string(&output_file)?"
---
{
  "version": 1,
  "name": "default_scenario",
  "target": {
    "base_url": "localhost:8080",
    "default_headers": {
      "Content-Type": "application/json"
    }
  },
  "workload": {
    "stages": [
      {
        "duration_sec": 10,
        "rps": 100
      }
    ]
  },
  "threshold": null
}
