libprotocol/tests/snapshots/integration_test__it_check_validate_with_invalid_scenario_validation_schema_error.snap
---
source: libprotocol/tests/integration_test.rs
expression: e
---
ValidationErrors {
    items: [
        ValidationError {
            path: "",
            code: "",
            message: "\"name\" is a required property",
        },
        ValidationError {
            path: "",
            code: "",
            message: "\"journeys\" is a required property",
        },
        ValidationError {
            path: "/target",
            code: "",
            message: "\"base_url\" is a required property",
        },
        ValidationError {
            path: "/version",
            code: "",
            message: "\"number\" is not of type \"integer\"",
        },
        ValidationError {
            path: "/workload/stages",
            code: "",
            message: "null is not of type \"array\"",
        },
        ValidationError {
            path: "",
            code: "json_parse_error",
            message: "Failed to parse JSON: missing field `base_url`",
        },
    ],
}
