libprotocol/tests/snapshots/integration_test__it_check_validate_with_invalid_scenario_validation_semantic_rules.snap
---
source: libprotocol/tests/integration_test.rs
expression: e
---
ValidationErrors {
    items: [
        ValidationError {
            path: "",
            code: "",
            message: "name required and must be great then 0",
        },
        ValidationError {
            path: "/target/base_url",
            code: "",
            message: "url must start with http or https",
        },
        ValidationError {
            path: "/workload/stages/0/duration_sec",
            code: "",
            message: "Duration must be >= 10 and < 86400 sec ",
        },
        ValidationError {
            path: "/workload/stages/0/rps",
            code: "",
            message: "Rps must be > 1 and < 100 ",
        },
        ValidationError {
            path: "/version",
            code: "unsupported_version",
            message: "Unsupported version: 2. Supported: [1]",
        },
    ],
}
